Text Overlap issue fixed

--- a/css/_chat.scss
+++ b/css/_chat.scss
@@ -44,7 +44,7 @@
 }
 #chat-conversation-container {
     // extract message input height
-    height: calc(100% - 68px);
+    height: calc(100% - 96px);
     overflow: hidden;
     position: relative;
 }
